fixed heigt of swiper&cropped images to fit in

--- a/style.css
+++ b/style.css
@@ -103,37 +103,14 @@ body
     background: green;
     color: white; 
     width: auto;
-    
-    border-radius: 15px;
+    border-radius: 10px;
   }
   .header h1 {
     font-size: 80px;
+    border-bottom: 50px;
   }
-  .navbar a.right {
-    float: right;
-  }
-  .navbar {
-    overflow: hidden;
-    background-color: white;
-  }
-  .navbar a {
-    float: left;
-    display: block;
-    color: green;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
-    .navbar a:hover {
-        background-color: gray;
-        color: white;
-  }
-  .row {  
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .container{width: 95%%;
-    height: 100vh;
+  .container{width: 100%;
+    height: 60vh;
     background: white; 
     display: flex;
     align-items: center;
@@ -142,18 +119,18 @@ body
   .swiper{
     width: 100%;
     height: fit-content;
-    margin-top: 50px;
+    margin-top: 100px;
   }
   .swiper-slide img{
     width: 100%;
     border: 2px solid green;
-    border-radius: 15px;
+    border-radius: 10px;
   }
-  .swiper .swiper-button-prev. .swiper-button-next{
-    color: rgb(17, 178, 17);
+  .swiper .swiper-button-prev, .swiper .swiper-button-next{
+    color: whitesmoke;
   }
-  .swiper.swiper-pagination-bullet-active{
-    color: white;
+  .swiper .swiper-pagination-bullet-active{
+    color: green;
   }
   
 @media screen (max-width:500px;) {
